[package]
name = "ssftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
ssh2 = "0.9.3"
rpassword = "6.0.1"

